[package]
name = "mainline-dht"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencode = { git = "https://github.com/naryand/bencode" }
crc32c = "0.6"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_repr = "0.1"
tokio = { version = "1.11", features = ["rt", "rt-multi-thread", "io-util", "net", "macros", "sync", "time"] }
rand = "0.8"